--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "image-library",
     "version": "0.1.0",
     "private": true,
-    "main": "src/electron.js",
+    "main": "public/electron.js",
+    "homepage": "./",
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
@@ -17,6 +18,7 @@
         "react-dom": "^17.0.1",
         "react-icons": "^3.11.0",
         "react-scripts": "4.0.0",
+        "sqlite3": "^5.0.0",
         "wait-on": "^5.2.0",
         "web-vitals": "^0.2.4"
     },
@@ -30,7 +32,20 @@
         "dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && electron .\"",
         "lint": "eslint .",
         "lint:fix": "eslint --fix .",
-        "format": "prettier --write \"src/*.+(js|jsx|json|css|md)\""
+        "format": "prettier --write \"src/*.+(js|jsx|json|css|md)\"",
+        "postinstall": "electron-builder install-app-deps",
+        "pack": "electron-builder --dir",
+        "dist": "electron-builder"
+    },
+    "build": {
+        "appId": "com.image-gallery.electron-cra",
+        "files": [
+            "build/**/*",
+            "node_modules/**/*"
+        ],
+        "directories": {
+            "buildResources": "assets"
+        }
     },
     "eslintConfig": {
         "extends": [
