--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
     "rules": {
         "react/prop-types": "off"
     },
-    "ignorePatterns": ["electron.js"],
+    "ignorePatterns": ["electron.js", "dist/*", "build/*"],
     "settings": {
         "react": {
             "createClass": "createReactClass",
