--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "concurrently": "^5.3.0",
         "cross-env": "^7.0.2",
         "electron-is-dev": "^1.2.0",
+        "frameless-titlebar": "^2.1.4",
+        "fs": "0.0.1-security",
         "prop-types": "^15.7.2",
         "react": "^17.0.1",
         "react-bootstrap": "^1.4.0",
